Separate Mandrel into its own command
* No longer part of Graal build.